// Original file: ocr.proto

import type { OcrResultInfo as _imo_ocr_OcrResultInfo, OcrResultInfo__Output as _imo_ocr_OcrResultInfo__Output } from '../imo_ocr/OcrResultInfo';

export interface ExecResp {
  'ocrInfos'?: (_imo_ocr_OcrResultInfo)[];
}

export interface ExecResp__Output {
  'ocrInfos'?: (_imo_ocr_OcrResultInfo__Output)[];
}
